--- a/manifest.yml
+++ b/manifest.yml
@@ -3,15 +3,17 @@ applications:
 
 - name: address-manager
   memory: 768M
-  random-route: true
+  host: address-manager
+#  random-route: true
   path: application/target/address-manager-application.war
   buildpack: sap_java_buildpack
   env:
     TARGET_RUNTIME: tomee
     JBP_CONFIG_SAPJVM_MEMORY_SIZES: 'metaspace:96m..'
     SET_LOGGING_LEVEL: '{ROOT: INFO, com.sap.cloud.sdk: INFO}'
-#  services:
-#  - my-application-logs
-#  - my-xsuaa
-#  - my-destination
+    ALLOW_MOCKED_AUTH_HEADER: true
+  services:
+  - my-xsuaa
+  - my-destination
 #  - my-connectivity
+#  - my-application-logs
